feat: helmcharts to deploy Eclipse Che (#1184)
* feat: helmcharts to deploy Eclipse Che

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/helmcharts/templates/cluster_rolebinding.yaml
+++ b/helmcharts/templates/cluster_rolebinding.yaml
@@ -22,7 +22,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: che-operator
-    namespace: eclipse-che
+    namespace: '{{ .Release.Namespace }}'
 roleRef:
   kind: ClusterRole
   name: che-operator
