--- a/helmcharts/next/crds/org_v1_che_crd.yaml
+++ b/helmcharts/next/crds/org_v1_che_crd.yaml
@@ -363,6 +363,10 @@ spec:
                         values are: `9.6` and `13.3`. Migrate your PostgreSQL database
                         to switch from one version to another.'
                       type: string
+                    pvcClaimSize:
+                      description: Size of the persistent volume claim for database.
+                        Defaults to `1Gi`.
+                      type: string
                   type: object
                 devWorkspace:
                   description: DevWorkspace operator configuration
