--- a/bundle/next-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next-all-namespaces/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -126,7 +126,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.40.0-378.next-all-namespaces
+  name: eclipse-che-preview-openshift.v7.40.0-379.next-all-namespaces
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1187,7 +1187,7 @@ spec:
                     resources:
                       limits:
                         cpu: 500m
-                        memory: 256Mi
+                        memory: 5Gi
                       requests:
                         cpu: 100m
                         memory: 64Mi
@@ -1439,4 +1439,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.40.0-378.next-all-namespaces
+  version: 7.40.0-379.next-all-namespaces
