--- a/helmcharts/templates/manager.yaml
+++ b/helmcharts/templates/manager.yaml
@@ -97,6 +97,10 @@ spec:
               value: quay.io/openshift/origin-oauth-proxy:4.7
             - name: RELATED_IMAGE_gateway_authorization_sidecar
               value: quay.io/openshift/origin-kube-rbac-proxy:4.7
+            - name: RELATED_IMAGE_gateway_authentication_sidecar_k8s
+              value: quay.io/oauth2-proxy/oauth2-proxy:v7.2.0
+            - name: RELATED_IMAGE_gateway_authorization_sidecar_k8s
+              value: quay.io/brancz/kube-rbac-proxy:v0.11.0
             - name: RELATED_IMAGE_gateway_header_sidecar
               value: quay.io/che-incubator/header-rewrite-proxy:latest
             - name: CHE_FLAVOR
