--- a/helmcharts/stable/Chart.yaml
+++ b/helmcharts/stable/Chart.yaml
@@ -31,5 +31,7 @@ annotations:
       email: abazko@redhat.com
     - name: Mykola Morhun
       email: mmorhun@redhat.com
+    - name: Oleksandr Andriienko
+      email: oandriie@redhat.com
   artifacthub.io/operator: "true"
   artifacthub.io/operatorCapabilities: Seamless Upgrades
