Install Eclipse Che to namespace eclipse-che
Signed-off-by: Oleksandr Andriienko <oandriie@redhat.com>

--- a/helmcharts/stable/templates/service_account.yaml
+++ b/helmcharts/stable/templates/service_account.yaml
@@ -19,4 +19,4 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
-  namespace: '{{ .Release.Namespace }}'
+  namespace: eclipse-che
