--- a/helmcharts/next/templates/controller-namespace.yaml
+++ b/helmcharts/next/templates/controller-namespace.yaml
@@ -11,12 +11,8 @@
 #
 
 apiVersion: v1
-kind: ServiceAccount
+kind: Namespace
 metadata:
-  name: che-operator
   labels:
-    app.kubernetes.io/name: che
-    app.kubernetes.io/instance: che
-    app.kubernetes.io/part-of: che.eclipse.org
-    app.kubernetes.io/component: che-operator
-  namespace: eclipse-che
+    app: che-operator
+  name: eclipse-che
