--- a/helmcharts/stable/templates/cluster_rolebinding.yaml
+++ b/helmcharts/stable/templates/cluster_rolebinding.yaml
@@ -22,7 +22,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: che-operator
-    namespace: '{{ .Release.Namespace }}'
+    namespace: eclipse-che
 roleRef:
   kind: ClusterRole
   name: che-operator
