--- a/helmcharts/stable/templates/role_binding.yaml
+++ b/helmcharts/stable/templates/role_binding.yaml
@@ -19,7 +19,7 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
-  namespace: '{{ .Release.Namespace }}'
+  namespace: eclipse-che
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
