--- a/helmcharts/stable/templates/cluster_rolebinding.yaml
+++ b/helmcharts/stable/templates/cluster_rolebinding.yaml
@@ -10,8 +10,8 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-apiVersion: v1
-kind: ServiceAccount
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: che-operator
   labels:
@@ -19,4 +19,11 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
-  namespace: '{{ .Release.Namespace }}'
+subjects:
+  - kind: ServiceAccount
+    name: che-operator
+    namespace: eclipse-che
+roleRef:
+  kind: ClusterRole
+  name: che-operator
+  apiGroup: rbac.authorization.k8s.io
