--- a/helmcharts/next/templates/service_account.yaml
+++ b/helmcharts/next/templates/service_account.yaml
@@ -19,4 +19,5 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
+    app.kubernetes.io/managed-by: olm
   namespace: eclipse-che
