--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -21,6 +21,7 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
+    app.kubernetes.io/managed-by: olm
 spec:
   replicas: 1
   selector:
@@ -36,6 +37,7 @@ spec:
         app.kubernetes.io/instance: che
         app.kubernetes.io/part-of: che.eclipse.org
         app.kubernetes.io/component: che-operator
+        app.kubernetes.io/managed-by: olm
     spec:
       containers:
         - name: che-operator
