--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -18,6 +18,7 @@ metadata:
     app.kubernetes.io/instance: che
     app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/name: che
+    app.kubernetes.io/managed-by: olm
   name: che-operator
 rules:
 ### CHE-OPERATOR ROLES ONLY: BEGIN
