--- a/helmcharts/stable/templates/manager.yaml
+++ b/helmcharts/stable/templates/manager.yaml
@@ -20,6 +20,7 @@ metadata:
     app.kubernetes.io/name: che
     app.kubernetes.io/instance: che
     app.kubernetes.io/component: che-operator
+    app.kubernetes.io/managed-by: olm
 spec:
   replicas: 1
   selector:
@@ -34,6 +35,7 @@ spec:
         app.kubernetes.io/name: che
         app.kubernetes.io/instance: che
         app.kubernetes.io/component: che-operator
+        app.kubernetes.io/managed-by: olm
     spec:
       containers:
         - name: che-operator
