--- a/bundle/next/eclipse-che-preview-kubernetes/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-kubernetes/manifests/che-operator.clusterserviceversion.yaml
@@ -133,7 +133,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-kubernetes.v7.40.0-380.next
+  name: eclipse-che-preview-kubernetes.v7.40.0-381.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1123,6 +1123,10 @@ spec:
                         value: quay.io/openshift/origin-oauth-proxy:4.7
                       - name: RELATED_IMAGE_gateway_authorization_sidecar
                         value: quay.io/openshift/origin-kube-rbac-proxy:4.7
+                      - name: RELATED_IMAGE_gateway_authentication_sidecar_k8s
+                        value: quay.io/oauth2-proxy/oauth2-proxy:v7.2.0
+                      - name: RELATED_IMAGE_gateway_authorization_sidecar_k8s
+                        value: quay.io/brancz/kube-rbac-proxy:v0.11.0
                       - name: RELATED_IMAGE_gateway_header_sidecar
                         value: quay.io/che-incubator/header-rewrite-proxy:latest
                       - name: CHE_FLAVOR
@@ -1406,4 +1410,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.40.0-380.next
+  version: 7.40.0-381.next
