ci: Release OLM files to 7.40.0
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/config/rbac/cluster_role.yaml
+++ b/config/rbac/cluster_role.yaml
@@ -551,6 +551,13 @@ rules:
     - list
     - watch
   - apiGroups:
+    - authorization.k8s.io
+    resources:
+    - localsubjectaccessreviews
+    - subjectaccessreviews
+    verbs:
+    - create
+  - apiGroups:
     - batch
     resources:
     - jobs
