--- a/helmcharts/next/templates/cluster_role.yaml
+++ b/helmcharts/next/templates/cluster_role.yaml
@@ -551,6 +551,13 @@ rules:
     - list
     - watch
   - apiGroups:
+    - authorization.k8s.io
+    resources:
+    - localsubjectaccessreviews
+    - subjectaccessreviews
+    verbs:
+    - create
+  - apiGroups:
     - batch
     resources:
     - jobs
