--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -126,7 +126,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.40.0-380.next
+  name: eclipse-che-preview-openshift.v7.40.0-382.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -948,6 +948,13 @@ spec:
                 - list
                 - watch
             - apiGroups:
+                - authorization.k8s.io
+              resources:
+                - localsubjectaccessreviews
+                - subjectaccessreviews
+              verbs:
+                - create
+            - apiGroups:
                 - batch
               resources:
                 - jobs
@@ -1439,4 +1446,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.40.0-380.next
+  version: 7.40.0-382.next
