--- a/.github/workflows/release-community-operator-PRs.yml
+++ b/.github/workflows/release-community-operator-PRs.yml
@@ -19,9 +19,6 @@ on:
       forceflag:
         description: 'To update an existing PR, use -f or --force flag here'
         default: ''
-      platforms:
-        description: 'List comma-separated platforms for which to create PRs'
-        default: 'kubernetes,openshift'  
   # trigger on commit to master branch of new CSVs, eg., https://github.com/eclipse/che-operator/pull/571/files
   push:
     branches:
@@ -63,7 +60,7 @@ jobs:
           export QUAY_PASSWORD_K8S=${{ secrets.QUAY_ECLIPSE_CHE_OPERATOR_KUBERNETES_PASSWORD }}
           export QUAY_USERNAME_OS=${{ secrets.QUAY_ECLIPSE_CHE_OPERATOR_OPENSHIFT_USERNAME }}
           export QUAY_PASSWORD_OS=${{ secrets.QUAY_ECLIPSE_CHE_OPERATOR_OPENSHIFT_PASSWORD }}
-          ./make-release.sh --prepare-community-operators-update ${{ github.event.inputs.forceflag }} -p ${{ github.event.inputs.platforms }}
+          ./make-release.sh --prepare-community-operators-update ${{ github.event.inputs.forceflag }}
       - name: Create failure MM message
         if: ${{ failure() }}
         run: |
