--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -13,13 +13,11 @@
 name: Code Coverage Report
 on: [push]
 jobs:
-  build-and-deploy:
+  code-coverage-report:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
-        with:
-          persist-credentials: false
       - name: Submit code coverage results
         run: |
          echo "" > coverage.txt
