--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -10,22 +10,28 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-name: PR validation
+name: PR check
 on: pull_request
 jobs:
-  build:
-    name: Image build
-    runs-on: ubuntu-20.04
-    steps:
-    - uses: actions/checkout@v1
-    - name: Build the Docker image
-      run: docker build .
-  multiplatform-build:
-    name: Multi-platform image build
+  unit-tests:
     runs-on: ubuntu-20.04
     steps:
     - name: Checkout source code
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2.3.1
+    - name: Run unit tests
+      run: make test
+  image-build:
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2.3.1
+    - name: Build image
+      run: docker build .
+  multiplatform-image-build:
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2.3.1
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
@@ -36,3 +42,66 @@ jobs:
         file: Dockerfile
         platforms: linux/amd64,linux/ppc64le
         tags: quay.io/eclipse/che-operator:next
+  source-code-validation:
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2.3.1
+    - name: Set up Go 1.15
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.15
+    - name: Cache go modules
+      id: cache-mod
+      uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+    - name: Download dependencies
+      run: go mod download
+      if: steps.cache-mod.outputs.cache-hit != 'true'
+    - name: Check go mod status
+      run: |
+        go mod tidy
+        if [[ ! -z $(git status -s) ]]
+        then
+          echo "Go mod state is not clean:"
+          git --no-pager diff
+          exit 1
+        fi
+    - name: Check format
+      run: |
+        go get -u golang.org/x/tools/cmd/goimports
+        go get -u github.com/che-incubator/check-license-header@379ba18fdb906d341ae451ea155cc34f1c4b4f1a
+        git reset HEAD --hard
+        echo "[INFO] Check code format and imports."
+        make fmt
+        if [[ ! -z $(git status -s) ]]
+        then
+          echo "not well formatted sources are found."
+          echo "execute 'make fmt' to fix the following:"
+          git --no-pager diff
+          exit 1
+        fi
+
+        echo "[INFO] Check license headers."
+        FILES_TO_CHECK_LICENSE=$(find . \
+        -not -path "./mocks/*" \
+        -not -path "./vendor/*" \
+        -not -path "./testbin/*" \
+        -not -path "./bundle/stable/*" \
+        -not -path "./config/manager/controller_manager_config.yaml" \
+        \( -name '*.sh' -o -name "*.go" -o -name "*.yaml" -o -name "*.yml" \))
+        LICENSE_TEMPLATE="${GITHUB_WORKSPACE}/hack/license-header.txt"
+        check-license-header -f "${LICENSE_TEMPLATE}" ${FILES_TO_CHECK_LICENSE}
+  dependencies-md-validation:
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Checkout source code
+      uses: actions/checkout@v2.3.1
+    - name: Validate DEPENDENCIES.md file
+      uses: che-incubator/dependencies-license-action@0.0.2
+      env:
+        EXCLUDE_DEPS: "github.com/bmizerany/assert, gotest.tools/v3, github.com/dhui/dktest, gotest.tools, github.com/golangplus/testing"
