--- a/.github/workflows/try-in-web-ide.yaml
+++ b/.github/workflows/try-in-web-ide.yaml
@@ -18,7 +18,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  add-link:
+  add-web-ide-link:
     runs-on: ubuntu-20.04
     steps:
       - name: Web IDE Pull Request Check
