--- a/.github/workflows/minikube-stable-update.yaml
+++ b/.github/workflows/minikube-stable-update.yaml
@@ -35,7 +35,7 @@ jobs:
         sudo install minikube-linux-amd64 /usr/local/bin/minikube
         minikube start --memory=6000mb
     - name: Install chectl
-      run: bash <(curl -sL  https://www.eclipse.org/che/chectl/) --channel=stable
+      run: bash <(curl -sL  https://www.eclipse.org/che/chectl/) --channel=next
     - name: Run tests
       run: /bin/bash .github/bin/minikube/test-stable-update.sh
       env:
