feat: Switch to DevWorkspace engine by default (#1265)
* feat: Switch to DevWorkspace engine by default

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/.github/workflows/minikube-test-backup-restore.yaml
+++ b/.github/workflows/minikube-test-backup-restore.yaml
@@ -10,34 +10,29 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-name: Minikube
+name: Backup & Restore
 on: pull_request
 jobs:
-  minikube-e2e:
-    name: Testing backup / restore
+  backup-restore-test-on-minikube:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v1
-    - name: Install jq
+    - name: Checkout source code
+      uses: actions/checkout@v2.3.1
+    - name: Start minikube cluster
+      id: run-minikube
+      uses: che-incubator/setup-minikube-action@next
+      with:
+        minikube-version: v1.23.2
+    - name: Enable Private registry
+      run: /bin/bash olm/minikube-registry-addon.sh &
+    - name: Install yq
       run: sudo pip install yq
-    - name: Provision Minikube cluster
-      run: |
-        curl -LO https://storage.googleapis.com/minikube/releases/v1.21.0/minikube-linux-amd64
-        sudo install minikube-linux-amd64 /usr/local/bin/minikube
-        minikube start --memory=6000mb
-    - name: Enable minikube addons
-      run: |
-        minikube addons enable ingress
-
-        # Enable registry and portfward to push images to registry
-        /bin/bash olm/minikube-registry-addon.sh &
     - name: Install chectl
       run: bash <(curl -sL https://www.eclipse.org/che/chectl/) --channel=next
     - name: Run tests
       run: /bin/bash .github/bin/minikube/test-backup-restore.sh
-    # Run this step even the previous step fail
     - uses: actions/upload-artifact@v2
       if: ${{ always() }}
       with:
-        name: minikube-backup-restore-artifacts
+        name: artifacts
         path: /tmp/artifacts-che
