fix: Restore tlsSupport field in CheCluster CR sample
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -66,6 +66,7 @@ metadata:
               "proxyPort": "",
               "proxySecret": "",
               "proxyURL": "",
+              "tlsSupport": true,
               "workspaceNamespaceDefault": "<username>-che"
             },
             "storage": {
@@ -113,7 +114,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.42.0-402.next
+  name: eclipse-che-preview-openshift.v7.42.0-403.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1455,4 +1456,4 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.42.0-402.next
+  version: 7.42.0-403.next
